--- a/Front-angular/package.json
+++ b/Front-angular/package.json
@@ -18,8 +18,15 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "angular-font-awesome": "^3.1.2",
+    "bootstrap": "^5.1.0",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.6.0",
+    "popper": "^1.0.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
+    "vendor": "^1.7.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
