--- a/Front-angular/package.json
+++ b/Front-angular/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~12.2.0",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^5.1.0",
+    "bootstrap-icons": "^1.5.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "popper": "^1.0.1",
