--- a/Front-angular/package.json
+++ b/Front-angular/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "front-angular",
+  "name": "EatMe",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -15,24 +15,21 @@
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
     "@angular/forms": "~12.2.0",
+    "@angular/localize": "~12.2.0",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
-    "angular-font-awesome": "^3.1.2",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "@popperjs/core": "^2.10.1",
     "bootstrap": "^5.1.0",
     "bootstrap-icons": "^1.5.0",
-    "font-awesome": "^4.7.0",
-    "jquery": "^3.6.0",
-    "popper": "^1.0.1",
-    "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
-    "vendor": "^1.7.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.1",
-    "@angular/cli": "~12.2.1",
+    "@angular-devkit/build-angular": "~12.2.4",
+    "@angular/cli": "~12.2.4",
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
