--- a/Front-angular/tsconfig.json
+++ b/Front-angular/tsconfig.json
@@ -21,12 +21,11 @@
       "dom"
     ],
     "strictPropertyInitialization": false
-
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true,
+    "strictTemplates": true
   }
 }
