--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ ProductsManagement/mvnw.cmd
 ProductsManagement/mvnw
 ProductsManagement/.mvn/
 ProductsManagement/src/main/resources/application.properties
+
+Front-angular/.Angular/
