--- a/WebAppModule/angular.json
+++ b/WebAppModule/angular.json
@@ -34,7 +34,9 @@
             ],
             "scripts": [
               "./node_modules/@popperjs/core/dist/umd/popper.min.js",
-              "./node_modules/bootstrap/dist/js/bootstrap.min.js"
+              "./node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "node_modules/ng-zorro-antd/ng-zorro-antd.min.css"
+
             ]
           },
           "configurations": {
