--- a/WebAppModule/package.json
+++ b/WebAppModule/package.json
@@ -25,6 +25,7 @@
     "@popperjs/core": "^2.10.1",
     "bootstrap": "^5.1.0",
     "bootstrap-icons": "^1.5.0",
+    "ng-zorro-antd": "^13.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
